Fix bug 1455099: [FTL] Make selectors with siblings more readable (#987)
By using indentation.

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1523,6 +1523,11 @@ body > header aside p {
   box-sizing: border-box;
 }
 
+.ftl-area section .indented .id {
+  margin-left: 10px;
+  width: calc(25% - 15px);
+}
+
 .ftl-area section .id .stress {
   color: #7BC876;
 }
